--- a/public/sass/modules/_main-structure.scss
+++ b/public/sass/modules/_main-structure.scss
@@ -13,6 +13,7 @@ body {
   font-size: $document-text-size;
   font-family: $text-font;
   padding-top: $navbar-height;
+  color: #474747;
 }
 h1,h2,h3,h4,h5{
   font-family: $heading-font;
