--- a/public/sass/views/_userprofile.scss
+++ b/public/sass/views/_userprofile.scss
@@ -1,40 +1,21 @@
 .header{
-  .user-pic-container{
-    // background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
-    width: 375px;
+  .user-pic{
     height: 375px;
-    position: absolute;
-    top: 56px;
+    display: flex;
+
   }
    #username{
      text-align: center;
-     
      height: 50px;
+     font-size: $h2-text-size;
    }
-  
-  #user-pic {
-      object-fit: cover;
-      width: 375px;
-      height: 375px;
-      height: 100%;
-      overflow: hidden;
-      position: relative;
-   } 
 
-   h2{
-     position: absolute;
-     top: 360px;
+   .fullname{
      font-size: $buddie-profile-name-size;
      color: white;
-   }
-   h3{
-    font-size: $buddie-profile-city-size;
-    // position: absolute;
-    // top: 400px;
-   }
-   
-    
-  
+     align-self: flex-end;
+     margin-bottom: 5%;
+   }  
 }
 
 @media (min-width: 556px) {
@@ -54,6 +35,17 @@
     width: 70px;
     height: 70px;
   }
+}
+
+.book-section{
+  padding: 5% 5% 0 5%;
+  background-color: #e3e3e3;
+  border: 1px grey solid;
+  margin: 10% 0;
+}
+
+input {
+  height: 40px;
 }
 
 // @media (min-width: 768px) {
