--- a/views/profile/me.hbs
+++ b/views/profile/me.hbs
@@ -24,14 +24,10 @@
         <p><strong>Highlights:</strong> <i>{{this.highlights}}</i></p>
         <p><strong>In category:</strong> {{this.category}}</p>
         <p><strong>Beds:</strong> {{this.bedsNumber}} {{this.typeBeds}}</p>
-  <button type="button" class="btn btn-lg btn-primary">
-    <a href="profile/edit" role="button">Edit</a>
-  </button>
+        
+        <a class="btn btn-lg btn-primary" href="profile/edit" role="button">Edit</a>
+
       </div>
     </div>
   </div>
-
-
-
-
 </section>
