add default date today in calendar

--- a/views/search/userlist.hbs
+++ b/views/search/userlist.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         {{#each users}}
-          {{> profileSCard }}
+          {{> userlistcard }}
         {{/each}}
       {{else}}
         <h2 class="pb-5">No buddies found in {{city}}</h2>
