--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -24,11 +24,11 @@
             <div class="form-group row">
               <div class="col-6">
                 <label for="startDate">From</label>
-                <input class="form-control" type="date" value="" name="startDate" id="startDate" min="2018-01-01" max="2019-12-31">
+                <input class="form-control date-input" type="date" value="" name="startDate" id="startDate">
               </div>
               <div class="col-6">
                 <label for="endDate">To</label>
-                <input class="form-control" type="date" value="" name="endDate" id="endDate" min="2018-01-01" max="2019-12-31">
+                <input class="form-control date-input" type="date" value="" name="endDate" id="endDate">
               </div>
             </div>
             <div class="form-group row">
@@ -39,8 +39,8 @@
           </form>
         </section>
         {{#if messages.length}}
-              {{#each messages}}<p>{{this}}</p>{{/each}}
-          {{/if}}
+          {{#each messages}}<p>{{this}}</p>{{/each}}
+        {{/if}}
       </div>
     </div>
   </div>
