--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -1,11 +1,15 @@
 <a href="/buddies/{{this.id}}">
   <div class="card">
     <div class="card-top">
-      <img class="card-img-top" src='/images/buddie-profile.jpg' alt="Card image cap">
+      <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg') no-repeat center; background-size: cover;" class="avatar-img container">
+
+        <h2 class="align-end">{{this.fullname}}</h5>
+      
+      </div>
     </div>
+
     <div class="card-body">
-      <h2 class="card-title">{{this.fullname}}</h5>
-      <p class="city">{{this.city}}</p>
+        <p class="">{{this.city}}</p>
       <p class="highlights"><i>{{this.highlights}}</i></p>
       <p class="bio">{{this.biography}}</p>
 
