--- a/views/buddies/form-reservations.hbs
+++ b/views/buddies/form-reservations.hbs
@@ -1,22 +1,22 @@
-<p></p>
-<p>{{this.endDate}}</p>
-<p>User: {{this.id}}</p>
-
-<section class="book-section">
+<section class="reservation-section pt-4">
   <div class="container">
-    
-    <div class="row vh-100 align-items-center top-section">
+    <div class="row align-items-center">
       
       <div class="col-md-6 col-lg-5 mx-auto">
+        <h2>Your reservation</h2>
+        <div class="book-info">
+          <p>You are about to book {{user.fullname}} from <span class="city">{{user.city}}</span></p>
+          <p>Please check booking dates and confirm:</p>
+        </div>
         <section class="login-form text-center">
-          <form method="post" action='/buddies/{{this.id}}/book' role="login" class="user-form">
+          <form method="post" action='/buddies/{{user.id}}/book' role="login" class="user-form">
             
 
             <input type="text" name="startDate" class="form-control input-lg" value="{{this.startDate}}">
             <input type="text" name="endDate" class="form-control input-lg" value="{{this.endDate}}">
             <input type="hidden" name="status" class="form-control input-lg" value="Pending">
             
-            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Book</button>
+            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Confirm</button>
 
           </form>
         </section>  
