commit pal pull

--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -1,7 +1,7 @@
 <a href="/buddies/{{this.id}}">
   <div class="card">
     <div class="card-top">
-      <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('https://www.elastic.co/assets/bltada7771f270d08f6/enhanced-buzz-1492-1379411828-15.jpg') no-repeat center; background-size: cover;" class="avatar-img container">
+      <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;" class="avatar-img container">
 
         <h2 class="align-end">{{this.fullname}}</h5>
       
