--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,7 +1,7 @@
 <section class="header">
   <h3 id="username" class="align-middle pt-3">@{{this.username}}</h3>
   {{!-- <img id="user-pic" src="https://static.vix.com/es/sites/default/files/styles/large/public/btg/curiosidades.batanga.com/files/111798556.jpg?itok=6PyOiwAG" alt="user-pic"> --}}
-  <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('https://images.unsplash.com/photo-1441123694162-e54a981ceba5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fcdbc9f32f5a6528097514e07d340524&auto=format&fit=crop&w=1534&q=80') no-repeat center; background-size: cover;" class="user-pic container">
+  <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;" class="user-pic container">
     <h2 class="fullname">{{this.fullname}}</h2>
   </div>
 
