Fix: reservations manage

--- a/views/profile/reservations.hbs
+++ b/views/profile/reservations.hbs
@@ -1,15 +1,38 @@
-  <div class="container">
-    
-    <div class="pending">
-      {{#each reservations}}
-        <div>
-          {{> reservationCard }}
-        </div>
-      {{/each}}
+<div class="container">
+  
+  <div class="pending">
+    {{#unless pending}}
+      <h2>You have no pending reservations</h2>
+    {{/unless}}
 
-    
+    {{#each pending}}
+      <div>
+        {{> reservationCard }}
+      </div>
+
+      <div>
+        <form method="post" action="/profile/reservations">
+          <button type="submit" name="status" value="Accepted" class="form-control input-lg">Accept</button>
+          <button type="submit" name="status" value="Rejected" class="form-control input-lg">Reject</button>  
+          <input type="hidden" name="id" value="{{this._id}}">
+        </form>
+      </div>
+
+    {{/each}}
+  </div>
+
+<div class="accepted">
+  {{#unless accepted}}
+    <h2>You have no accepted reservations</h2>
+  {{/unless}}
+
+  {{#each accepted}}
+    <div>
+      {{> reservationCard }}
     </div>
 
-  </div>
+
+  {{/each}}
+</div>
 
 
