Add: populate to reservations

--- a/views/partials/reservationCard.hbs
+++ b/views/partials/reservationCard.hbs
@@ -1,8 +1,8 @@
 <div>
   <div>
-    <h2>{{this.idBuddy}}</h2>
-    <p>{{this.status}}</p>
-    <p><i>{{this.startDate}}</i></p>
-    <p><i>{{this.endDate}}</i></p>
+    <h2>{{this.idBuddy.avatarUrl}}</h2>
+    <p>Status: {{this.status}}</p>
+    <p>Start Date: <i>{{this.startDate}}</i></p>
+    <p>End Date: <i>{{this.endDate}}</i></p>
   </div>
 </div>
