--- a/views/500.hbs
+++ b/views/500.hbs
@@ -1,9 +1,7 @@
-<section class="page-other">
+<section class="page-404">
   <div class="d-flex flex-column justify-content-center vh-80">
-    <div class="col-md-6 mx-auto content-box">
-      <h1>{{message}}</h1>
-      <h2>{{error.status}}</h2>
-      <pre>{{error.stack}}</pre>
+    <div class="col-md-6 mx-auto content-404">
+      <h2>Error 500</h2>
       <a href="/" class="btn btn-primary pt-2 pb-2 mt-3">Back to home</a>
     </div>
   </div>
