--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,10 +17,23 @@ h1, h2, h3, h4, h5 {
   font-family: "Maven Pro", sans-serif;
   font-weight: 400 !important; }
 
+.content-box {
+  border: 1px solid #e4e4e4;
+  padding: 30px; }
+
+.page-other + footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%; }
+
 .vh-100 {
   min-height: 100vh; }
   .vh-100.top-section {
     margin-top: -56px; }
+
+.vh-80 {
+  min-height: 80vh; }
 
 h2 {
   font-size: 2rem;
