--- a/views/partials/userListCard.hbs
+++ b/views/partials/userListCard.hbs
@@ -1,20 +1,16 @@
-<div class="col-md-4 col-lg-3 buddie-card">
-  <a href="/buddies/{{this.id}}">
-    <div class="px-3">
-      <div class="row">
-        <figure class="col-12 profile-img">
-          <img class="img-fluid" src="/images/buddie-profile.jpg" alt="{{this.username}}">
-        </figure>
-        <div class="col-12">
-          <div class="d-flex justify-content-between">
-            <h3 class="card-title">{{this.fullname}}</h3>
-            <div class="rate">7.9</div>
-          </div>
+<a href="/buddies/{{this.id}}" class="buddie-card">
+  <div class="card">
+    <div class="card-top">
+      <div class="avatar-img" style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;">
+        <div class="align-end">
+          <h2 class="fullname">{{this.fullname}}</h2>
           <p class="city">{{this.city}}</p>
-          
           <p class="highlights"><i>{{this.highlights}}</i></p>
         </div>
       </div>
     </div>
-  </a>
-</div>
+    <div class="card-body">
+      <p class="bio">{{this.biography}}</p>
+    </div>
+  </div>
+</a>
