--- a/public/sass/components/_reservationCard.scss
+++ b/public/sass/components/_reservationCard.scss
@@ -7,17 +7,23 @@
 
   img{
     width: 100px;
+    object-position: center;
+    overflow: hidden;
+
   }
 
   .text-book-card{
-    padding: 5% 0 5% 5%;
+    padding: 3% 0 3% 5%;
   
     h2{
       margin: 0;
-      font-size: $h2-text-size;
+      font-size: 18px;
+      font-weight: bolder;
     }
     p{
       margin: 0;
+      font-size: 14px;
+      color: 	#A9A9A9;
     }
   }
 }
