fix: slider cards

--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -45,6 +45,21 @@
     width: 100%;
     font-size: .8rem;
     font-weight: 200;
+    position: relative;
+    height: 41px;
+  }
+  &:before{
+    position: absolute;
+    right: 0px;
+    width: 50px;
+    height: 100%;
+    z-index: 2;
+    top: 5px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 600;
+    content: "\f002";
+    font-size: 1.3rem;
+    color: $border-color;
   }
 }
 
