--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,12 +1,12 @@
 <nav class="navbar fixed-top">
 <div class="container-fluid">
   <div class="row">
-    <div class="brand col-3 col-sm-3">
+    <div class="brand col-3 col-sm-2">
       <a class="navbar-brand" id="site-logo" href="/"><strong>LB</strong></a>
     </div>
-    <div class="col col-7 col-sm-8">
+    <div class="col-9 col-sm-8">
       <form class="searchform" action="/search">
-        <input type="text" class="form-control" placeholder="Search by city" name="city" aria-label="City">
+        <input type="text" class="form-control" placeholder="Search by city" name="city" aria-label="City" id="search">
       </form>
     </div>
   </div>
