--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -1,18 +1,16 @@
-<a href="/buddies/{{this.id}}">
+<a href="/buddies/{{this.id}}" class="buddie-card">
   <div class="card">
     <div class="card-top">
-      <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;" class="avatar-img container">
-
-        <h2 class="align-end">{{this.fullname}}</h5>
-      
+      <div class="avatar-img" style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;">
+        <div class="align-end">
+          <h3 class="fullname">{{this.fullname}}</h3>
+          <p class="city">{{this.city}}</p>
+        </div>
       </div>
     </div>
-
     <div class="card-body">
-        <p class="">{{this.city}}</p>
       <p class="highlights"><i>{{this.highlights}}</i></p>
       <p class="bio">{{this.biography}}</p>
-
     </div>
   </div>
 </a>
