--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,17 +1,53 @@
 <section class="header">
   <h3 id="username" class="align-middle pt-3">@{{this.username}}</h3>
-  {{!-- <img id="user-pic" src="https://static.vix.com/es/sites/default/files/styles/large/public/btg/curiosidades.batanga.com/files/111798556.jpg?itok=6PyOiwAG" alt="user-pic"> --}}
   <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;" class="user-pic container">
-    <h2 class="fullname">{{this.fullname}}</h2>
+    <table style="height: 100%;">
+        <tr>
+          <td class="align-bottom header-name">
+                <h2 class="fullname">{{this.fullname}}</h2>
+                <p>{{this.city}}</p>
+          </td>
+        </tr>
+    </table>
   </div>
 
+</section>
+
+<section class="container mt-3">
+
+    <div class="row info-icons text-center">
+        {{#if this.category}}
+          <div class="col">
+            <i class="fas fa-map-marked-alt fa-2x"></i>            
+            <p class="icon-text">{{this.category}}</p>
+          </div>
+        {{/if}}
+
+
+        {{#if this.typeBeds}}
+          <div class="col">
+            <i class="fas fa-bed fa-2x"></i>
+            <p class="icon-text">{{this.typeBeds}}</p>
+
+            </div>
+        {{/if}}
+
+        {{#if this.transport}}
+        <div class="col">
+          <i class="fas fa-car  fa-2x"></i>
+          <p class="icon-text">{{this.transport}}</p>
+          </div>
+        {{/if}}
+      </div>
+
+
+    </div>
+    <p><i>{{this.highlights}}</i></p>
 </section>
 
 <div class="container">
     <div class="row mt-3">
       <div class="col-md-7">
-        <p><strong>Highlights:</strong> <i>{{this.highlights}}</i></p>
-        <p class="age">Age: {{this.age}}</p>
         <h2 class="mt-5">About me</h2>
         <p>{{this.biography}}</p>
         <p><strong>In category:</strong> {{this.category}}</p>
@@ -45,62 +81,3 @@
     </div>
   </div>
 
-
-
-
-{{!-- <section class="buddie-profile" id="buddie-profile">
-  <div class="top-banner">
-    <div class="container pt-4">
-      <div class="buddie-info d-flex flex-column justify-content-between">
-        <div class="buddie-details">
-          <h2>{{this.fullname}}</h2>
-          <p class="city">{{this.city}}</p>
-        </div>
-        {{#if this.rate}}
-          <p class="rate">Rate: {{this.rate}}</p>
-        {{/if}}
-      </div>
-      <div class="avatar round">
-        <img class="profile-img img-fluid" src='/images/buddie-profile.jpg'; alt="Card image cap">
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row mt-3">
-      <div class="col-md-7">
-        <h2>About me</h2>
-        <p class="age">Age: {{this.age}}</p>
-        <p>{{this.biography}}</p>
-        <p><strong>Highlights:</strong> <i>{{this.highlights}}</i></p>
-        <p><strong>In category:</strong> {{this.category}}</p>
-        <p><strong>Beds:</strong> {{this.bedsNumber}} {{this.typeBeds}}</p>
-      </div>
-      <div class="col-md-4 ml-auto">
-        <section class="book-section">
-          <h2>Book this buddie</h2>
-          <form action="/buddies/{{this.id}}/book">
-            <div class="form-group row">
-              <div class="col-6">
-                <label for="startDate">From</label>
-                <input class="form-control" type="date" value="" name="startDate" id="startDate" min="2018-01-01" max="2019-12-31">
-              </div>
-              <div class="col-6">
-                <label for="endDate">To</label>
-                <input class="form-control" type="date" value="" name="endDate" id="endDate" min="2018-01-01" max="2019-12-31">
-              </div>
-            </div>
-            <div class="form-group row">
-              <div class="col">
-                <button type="submit" id="book-buddy" class="btn btn-lg btn-primary btn-block">Book</button>
-              </div>
-            </div>
-          </form>
-        </section>
-        {{#if messages.length}}
-              {{#each messages}}<p>{{this}}</p>{{/each}}
-          {{/if}}
-      </div>
-    </div>
-  </div>
-</section> --}}
