--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,7 +132,7 @@ a {
   height: 30px; }
 
 .swiper-container {
-  padding-bottom: 20px; }
+  padding-bottom: 80px; }
 
 .swiper-pagination-bullet-active {
   opacity: 1;
@@ -474,8 +474,11 @@ h2 {
   color: #25797c;
   font-size: 1rem; }
 
-.meet-our-buddies, .about-us {
+.about-us {
   padding: 50px 0; }
+
+.meet-our-buddies {
+  padding: 50px 0 20px; }
 
 .about-us .icon {
   font-size: 80px; }
