--- a/views/profile/me.hbs
+++ b/views/profile/me.hbs
@@ -46,13 +46,14 @@
 </section>
 
 <div class="container">
-    <div class="row mt-3">
-      <div class="col-md-7">
-        <h2 class="mt-5">About me</h2>
+    <div class="row mt-1">
+      <div class="col-md-7 mb-4">
+        {{#if this.biography}}
+        <h2 class="">About me</h2>
         <p>{{this.biography}}</p>
-        <p><strong>In category:</strong> {{this.category}}</p>
-        <p><strong>Beds:</strong> {{this.bedsNumber}} {{this.typeBeds}}</p>
-        <a class="btn btn-lg btn-primary" href="profile/edit" role="button">Edit</a>
+        {{else}}
+         <p><a href="profile/edit">Please edit your profile to show more info about yourself</a></p>
+        {{/if}}
       </div>
 
 
